==> redstonee/Arduino-sunxi/libraries/Wire/src/utility/twi.c <==
#include "core_debug.h"
#include "utility/twi.h"
#include "PinAF_sunxi.h"
#define I2C_TIMEOUT_TICK        100
#define SLAVE_MODE_TRANSMIT     0
#define SLAVE_MODE_RECEIVE      1
#define SLAVE_MODE_LISTEN       2

void i2c_custom_init(i2c_t *obj, uint32_t timing, uint32_t addressingMode, uint32_t ownAddress)
{
  if (obj != NULL) 
  {
  
    I2C_HandleTypeDef *handle = &(obj->handle);
    // Determine the I2C to use
    I2C_TypeDef *i2c_sda = pinmap_peripheral(obj->sda, PinMap_I2C_SDA);
    I2C_TypeDef *i2c_scl = pinmap_peripheral(obj->scl, PinMap_I2C_SCL);

    //Pins SDA/SCL must not be NP
    if (i2c_sda == NP || i2c_scl == NP) 
    {
      core_debug("ERROR: at least one I2C pin has no peripheral\n");
    } 
    else 
    {

      obj->i2c = pinmap_merge_peripheral(i2c_sda, i2c_scl);
      if (obj->i2c == NP) 
      {
        core_debug("ERROR: I2C pins mismatch\n");
      } 
      else 
      {
#if defined I2C1_BASE
        // Enable I2C1 clock if not done
        if (obj->i2c == I2C1) 
        {
          RCC_APB1PeriphResetCmd(RCC_APB1Periph_I2C1, ENABLE);
          RCC_APB1PeriphResetCmd(RCC_APB1Periph_I2C1, DISABLE);
          RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C1, ENABLE );

          obj->irq = I2C1_EV_IRQn;
          obj->irqER = I2C1_ER_IRQn;
          i2c_handles[I2C1_INDEX] = handle;
        }
#endif // I2C1_BASE
#if defined I2C2_BASE
        // Enable I2C2 clock if not done
        if (obj->i2c == I2C2) 
        {
          RCC_APB1PeriphResetCmd(RCC_APB1Periph_I2C2, ENABLE);
          RCC_APB1PeriphResetCmd(RCC_APB1Periph_I2C2, DISABLE);
          RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C2, ENABLE );

          obj->irq = I2C2_EV_IRQn;
          obj->irqER = I2C2_ER_IRQn;
          i2c_handles[I2C2_INDEX] = handle;
        }
#endif // I2C2_BASE


        /* Configure I2C GPIO pins */
        pinmap_pinout(obj->scl, PinMap_I2C_SCL);
        pinmap_pinout(obj->sda, PinMap_I2C_SDA);

        handle->Instance                 = obj->i2c;
        handle->Init.I2C_ClockSpeed      = i2c_getTiming(obj, timing);
        handle->Init.I2C_Mode            = I2C_Mode_I2C;
        /* Standard mode (sm) is up to 100kHz, then it's Fast mode (fm)     */
        /* In fast mode duty cyble bit must be set in CCR register          */
        if (timing > 100000) 
        {
          handle->Init.I2C_DutyCycle     = I2C_DutyCycle_16_9;
        } 
        else 
        {
          handle->Init.I2C_DutyCycle     = I2C_DutyCycle_2;
        }
        handle->Init.I2C_OwnAddress1     = ownAddress;
        handle->Init.I2C_Ack             = I2C_Ack_Enable;
        handle->Init.I2C_AcknowledgedAddress = addressingMode;

#if 0 
        /* Interruption is temporarily not supported */ 
        NVIC_SetPriority(obj->irq, I2C_IRQ_PRIO, I2C_IRQ_SUBPRIO);
        NVIC_EnableIRQ(obj->irq);

        NVIC_SetPriority(obj->irqER, I2C_IRQ_PRIO, I2C_IRQ_SUBPRIO);
        NVIC_EnableIRQ(obj->irqER);
#endif

        /* Init the I2C */
        I2C_Init(obj->i2c, &(handle->Init));
        I2C_Cmd(obj->i2c,ENABLE);

        /* Initialize default values */
        // obj->slaveRxNbData = 0;
        // obj->slaveMode = SLAVE_MODE_LISTEN;
      }
    }
  }
}

void i2c_deinit(i2c_t *obj)
{
  NVIC_DisableIRQ(obj->irq);
  NVIC_DisableIRQ(obj->irqER);
  I2C_DeInit(obj->i2c);
}

void i2c_setTiming(i2c_t *obj, uint32_t frequency)
{
  uint32_t f = i2c_getTiming(obj, frequency);
  I2C_Cmd(obj->i2c, DISABLE);


  obj->handle.Init.I2C_ClockSpeed = f;
  /* Standard mode (sm) is up to 100kHz, then it's Fast mode (fm)     */
  /* In fast mode duty cyble bit must be set in CCR register          */
  if (frequency > 100000) 
  {
    obj->handle.Init.I2C_DutyCycle       = I2C_DutyCycle_16_9;
  }
  else 
  {
    obj->handle.Init.I2C_DutyCycle       = I2C_DutyCycle_2;
  }
  I2C_Init(obj->i2c, &(obj->handle.Init));
  I2C_Cmd(obj->i2c, ENABLE);

  if(obj->isMaster) I2C_AcknowledgeConfig( obj->i2c, ENABLE ); //if OWMaddr is 0x01,means masters
}

i2c_status_e i2c_master_write(i2c_t *obj, uint8_t dev_address,
                              uint8_t *data, uint16_t size, uint8_t sendstop)

{
  i2c_status_e  ret = I2C_OK;
  uint32_t tickstart = GetTick();
  {
    I2C_AcknowledgeConfig( obj->handle.Instance, ENABLE ); 
    while(I2C_GetFlagStatus(obj->handle.Instance, I2C_FLAG_BUSY) != RESET)  //waite for busy
    {
        if((GetTick()-tickstart) > I2C_TIMEOUT_TICK) 
        {
          return I2C_TIMEOUT;
        }
    }
    tickstart = GetTick();
    I2C_GenerateSTART(obj->handle.Instance, ENABLE);
    while(!I2C_CheckEvent(obj->handle.Instance, I2C_EVENT_MASTER_MODE_SELECT))
    {
        if((GetTick()-tickstart) > I2C_TIMEOUT_TICK) 
        {
          return I2C_TIMEOUT;
        }
    }
    tickstart = GetTick();
    I2C_Send7bitAddress(obj->handle.Instance, dev_address, I2C_Direction_Transmitter);
    while(!I2C_CheckEvent(obj->handle.Instance, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED))//{}
    {
        if((GetTick()-tickstart) > I2C_TIMEOUT_TICK) 
        {
          return I2C_TIMEOUT;
        }
    }

    while(size)
    {
        if( I2C_GetFlagStatus(obj->handle.Instance, I2C_FLAG_TXE) != RESET )
        {
            I2C_SendData(obj->handle.Instance, *data++);
            size--;
        }
    }

    tickstart = GetTick();
    while(!I2C_CheckEvent(obj->handle.Instance, I2C_EVENT_MASTER_BYTE_TRANSMITTED))
    {
        if((GetTick()-tickstart) > I2C_TIMEOUT_TICK) 
        {
          return I2C_TIMEOUT;
        }
    }

    if(sendstop)  
    {
      I2C_GenerateSTOP(obj->handle.Instance, ENABLE);
    }
  }
  return ret;
}

i2c_status_e i2c_master_read(i2c_t *obj, uint8_t dev_address, uint8_t *data, uint16_t size)
{
  i2c_status_e ret = I2C_OK;
  uint32_t tickstart = GetTick();

  I2C_GenerateSTART( obj->handle.Instance, ENABLE );
  while( !I2C_CheckEvent( obj->handle.Instance, I2C_EVENT_MASTER_MODE_SELECT ) )
  {
      if((GetTick()-tickstart) > I2C_TIMEOUT_TICK) 
      {
          return I2C_TIMEOUT;
      }    
  }

	I2C_Send7bitAddress( obj->handle.Instance, dev_address, I2C_Direction_Receiver );
  while( !I2C_CheckEvent( obj->handle.Instance, I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED ) )
  {
      if((GetTick()-tickstart) > I2C_TIMEOUT_TICK) 
      {
          return I2C_TIMEOUT;
      }
  }

  while(size)
  {
      if(size==1) I2C_AcknowledgeConfig( obj->handle.Instance, DISABLE );  //last data needn't to ACK
      while(I2C_GetFlagStatus( obj->handle.Instance, I2C_FLAG_RXNE ) ==  RESET);
      *data++ = I2C_ReceiveData( obj->handle.Instance );
      size--;
  }
  I2C_GenerateSTOP( obj->handle.Instance, ENABLE );
  return ret;
}
